Archive2/ed/83c4566d64e1d6/output
main.cpp: In instantiation of 'test::meow(double)::<lambda(auto:1&&)> [with auto:1 = double&]':
main.cpp:13:11:   required from here
main.cpp:11:11: error: assignment of member 'test::a' in read-only object
    self.a += static_cast<int>(p);
           ^
